Ctrl F in Asset Browser crashes blender #83888

Closed
opened 2020-12-17 12:36:32 +01:00 by tasos · 7 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.79

Blender Version
Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-12-16 23:32, hash: 3a1d1aaa86
Worked: (newest version of Blender that worked as expected)

Short description of error
If you open asset library and press ctrl-f inside the asset library window blender crashes

Exact steps for others to reproduce the error
Open asset library and press ctrl-f inside the asset library window

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.79 **Blender Version** Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-12-16 23:32, hash: `3a1d1aaa86` Worked: (newest version of Blender that worked as expected) **Short description of error** If you open asset library and press ctrl-f inside the asset library window blender crashes **Exact steps for others to reproduce the error** Open asset library and press ctrl-f inside the asset library window
Author

Added subscriber: @TasosK

Added subscriber: @TasosK
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Philipp Oeser changed title from Ctrl F on asset library crashes blender to Ctrl F in Asset Browser crashes blender 2020-12-17 13:12:27 +01:00
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2020-12-17 13:28:43 +01:00
Member

Will check.

region is NULL

1  UI_textbutton_activate_rna                interface_handlers.c 10994 0x40d9e9e 
2  file_start_filter_exec                    file_ops.c           2787  0x9607a57 
3  wm_operator_invoke                        wm_event_system.c    1305  0x323a30a 
4  wm_handler_operator_call                  wm_event_system.c    2134  0x323c0e7 
5  wm_handlers_do_keymap_with_keymap_handler wm_event_system.c    2450  0x323ce02 
6  wm_handlers_do_intern                     wm_event_system.c    2746  0x323dd73 
7  wm_handlers_do                            wm_event_system.c    2870  0x323e237 
8  wm_event_do_handlers                      wm_event_system.c    3366  0x323f84d 
9  WM_main                                   wm.c                 635   0x32338a9 
10 main                                      creator.c            522   0x2c9f6dd 
Will check. `region` is NULL ``` 1 UI_textbutton_activate_rna interface_handlers.c 10994 0x40d9e9e 2 file_start_filter_exec file_ops.c 2787 0x9607a57 3 wm_operator_invoke wm_event_system.c 1305 0x323a30a 4 wm_handler_operator_call wm_event_system.c 2134 0x323c0e7 5 wm_handlers_do_keymap_with_keymap_handler wm_event_system.c 2450 0x323ce02 6 wm_handlers_do_intern wm_event_system.c 2746 0x323dd73 7 wm_handlers_do wm_event_system.c 2870 0x323e237 8 wm_event_do_handlers wm_event_system.c 3366 0x323f84d 9 WM_main wm.c 635 0x32338a9 10 main creator.c 522 0x2c9f6dd ```

This issue was referenced by fed995ced5

This issue was referenced by fed995ced5b0b963bb42de5aa3e93a3c5dc91aac
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Author

nice

nice
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#83888
No description provided.